Fixing a poor practice in the Lexer.